--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=ToDoList
 APP_ENV=production
-APP_KEY=base64:XA2hE18U4h6P9X7MQ22BqEGqX+IA7LSKMk8E5B6pxTg=
+APP_KEY=base64:l4gjLTzmCHuOTUSC6/ZL+nR/lhjHaGgBeMkH1V3Hzfc=
 APP_DEBUG=false
-APP_URL=http://kuran1332.shop
+APP_URL=http://www.kuran1332.shop
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=ToDoListDB
-DB_USERNAME=laradock
-DB_PASSWORD=""
+DB_DATABASE=kuran1332
+DB_USERNAME=kuran1332
+DB_PASSWORD=abcd123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
